--- a/app/scss/blog-list/_blog-list.scss
+++ b/app/scss/blog-list/_blog-list.scss
@@ -68,6 +68,8 @@ ul.blog-list__pagination {
     }
 
     &__title {
+        @include line-clamp (3);
+
         margin-bottom: 5px;
         font-weight: 400;
         font-size: 15px;
