--- a/app/scss/blog-one/_blog-one.scss
+++ b/app/scss/blog-one/_blog-one.scss
@@ -1,9 +1,84 @@
 .blog-one {
     padding: 120px 0;
 
+    .category {
+        @include r($lg) {
+            margin-bottom: 20px;
+        }
+    }
+
     &__content {
         display: flex;
         justify-content: space-between;
+
+        @include r($lg) {
+            flex-direction: column-reverse;
+        }
+    }
+
+    .slide {
+        border: none;
+        background-color: transparent;
+        pointer-events: none;
+    }
+
+    @include r($lg) {
+        padding: 60px 0;
+    }
+
+    @include r($lg) {
+        .filter-shop {
+            margin: 0 auto;
+            padding-bottom: 30px;
+            max-width: 500px;
+        }
+
+        .slide {
+            pointer-events: auto;
+
+            &::before {
+                content: "";
+                position: absolute;
+                right: -34px;
+                top: 50%;
+                width: 3px;
+                height: 30px;
+                background-color: $blue20;
+                transform: translateY(-50%);
+                transition: all 0.7s ease;
+            }
+
+            &::after {
+                transition: all 0.7s ease;
+            }
+        }
+
+        .slide.slide--active {
+            &::before {
+                top: -2px;
+                background-color: $bg;
+                transform: rotate(90deg);
+
+                // height: 0;
+            }
+
+            &::after {
+                right: -52px;
+                transform: rotate(-180deg);
+
+                // height: 0;
+            }
+        }
+
+        .slide + .category__form,
+        .slide + .recent-posts__list {
+            pointer-events: none;
+
+            @include r($lg) {
+                display: none;
+                pointer-events: auto;
+            }
+        }
     }
 }
 
@@ -68,6 +143,10 @@
             font-weight: 400;
             font-size: 36px;
             color: #333;
+
+            @include r($md) {
+                font-size: 30px;
+            }
         }
 
         &__bolt {
@@ -85,6 +164,10 @@
             border-left: 8px solid $blue20;
             color: $blue80;
             background-color: rgba(163, 187, 200, 0.2);
+
+            @include r($md) {
+                margin: 20px 0;
+            }
         }
 
         cite {
@@ -111,6 +194,11 @@
             width: 320px;
             height: 210px;
             object-fit: cover;
+
+            @include r($md) {
+                float: none;
+                width: 100%;
+            }
         }
 
         h3 {
@@ -119,15 +207,27 @@
             font-weight: 500;
             font-size: 18px;
             color: $blue80;
+
+            @include r($md) {
+                padding: 14px 0;
+            }
         }
     }
 
     &__author {
         margin-bottom: 57px;
+
+        @include r($sm) {
+            margin-bottom: 30px;
+        }
     }
 
     &__comments {
         margin-bottom: 57px;
+
+        @include r($sm) {
+            margin-bottom: 20px;
+        }
     }
 
     .contact-form__text {
@@ -140,6 +240,10 @@
         font-size: 23px;
         color: #436372;
     }
+
+    @include r($xl) {
+        margin-right: 30px;
+    }
 }
 
 .author-info {
@@ -151,10 +255,17 @@
 
     &__box {
         display: flex;
+        flex-shrink: 0;
         align-items: center;
+        margin-right: 10px;
 
         span {
             display: block;
+        }
+
+        @include r($sm) {
+            margin-right: 0;
+            margin-bottom: 20px;
         }
     }
 
@@ -215,6 +326,10 @@
             margin-left: 30px;
         }
     }
+
+    @include r($sm) {
+        flex-direction: column;
+    }
 }
 
 .comments {
@@ -237,6 +352,10 @@
         margin-right: 32px;
         width: 100px;
         height: 100px;
+
+        @include r($sm) {
+            display: none;
+        }
     }
 
     &__img {
@@ -259,6 +378,12 @@
         top: 23px;
         font-size: 14px;
         color: #9e9e9e;
+
+        @include r($xsm) {
+            position: static;
+            display: inline-block;
+            margin-bottom: 20px;
+        }
     }
 
     &__text {
@@ -293,5 +418,10 @@
         max-width: 700px;
         border-top: 2px solid #e0e0e0;
         border-bottom: 2px solid #e0e0e0;
+
+        @include r($xsm) {
+            padding: 23px 10px;
+            background-color: rgba(163, 187, 200, 0.2);
+        }
     }
 }
