--- a/app/scss/products/_products.scss
+++ b/app/scss/products/_products.scss
@@ -61,8 +61,9 @@
         }
     }
 
-    @include r($md) {
-        padding-bottom: 60px;
+    @include r($lg) {
+        position: relative;
+        padding-bottom: 220px;
     }
 }
 
