--- a/app/scss/index/_advantages.scss
+++ b/app/scss/index/_advantages.scss
@@ -10,10 +10,10 @@
 
     &__item {
         display: flex;
+        align-items: center;
         justify-content: center;
         padding: 28px 20px 45px 84px;
-        width: 100%;
-        max-width: 600px;
+        width: 33.333%;
         background-color: #fef7f0;
 
         &:not(:last-child) {
