--- a/app/html/parts/components/_footer.html
+++ b/app/html/parts/components/_footer.html
@@ -3,7 +3,7 @@
         <div class="footer__top">
             <div class="footer__column">
                 <a class="logo footer__logo" href="#">
-                    <img class="logo__image" src="images/icons/logo.svg" alt="logo Glee">
+                    <img class="logo__image" src="images/icons/logo.png" alt="logo Glee">
                 </a>
                 <address class="footer__contacts">
                     <span class="footer__contact">
