--- a/app/scss/components/_pagination.scss
+++ b/app/scss/components/_pagination.scss
@@ -1,6 +1,6 @@
 .pagination {
     display: flex;
-    justify-content: center;
+    overflow-x: auto;
 
     &__item {
         border: 1px solid $blue20;
