--- a/scss/components/_header.scss
+++ b/scss/components/_header.scss
@@ -28,7 +28,7 @@
     }
 
     &--sticky {
-        background-color: #fff3e9;
+        background-color: #e2dbd5;
 
         .header__inner {
             padding: 20px 0;
