--- a/scss/forms/_contact-form.scss
+++ b/scss/forms/_contact-form.scss
@@ -90,7 +90,7 @@
     &__input,
     &__text {
         display: inline-block;
-        padding: 16px 22px;
+        padding: 16px 45px 16px 22px;
         width: 100%;
         border: none;
         background-color: #f5f5f5;
