--- a/scss/forms/_subscribtion-form.scss
+++ b/scss/forms/_subscribtion-form.scss
@@ -13,7 +13,7 @@
     }
 
     &__input {
-        padding-left: 16px;
+        padding-left: 0 16px;
         width: 100%;
         height: 100%;
         outline: transparent;
