--- a/scss/index/_video-popup.scss
+++ b/scss/index/_video-popup.scss
@@ -19,7 +19,7 @@
         border-radius: 50%;
         box-shadow: 0 0 0 0 rgba(163, 187, 200, 0.3);
         background-image: url("../images/sprite.svg#play");
-        background-position: center 30px;
+        background-position: center;
         background-size: 25px;
         background-repeat: no-repeat;
         background-color: $blue20;
