--- a/scss/log-in/_log-in.scss
+++ b/scss/log-in/_log-in.scss
@@ -17,6 +17,7 @@
 
     &__input {
         margin-bottom: 30px;
+        padding: 0 15px;
         height: 60px;
         border: 1px solid $gray10;
 
