--- a/scss/products/_products.scss
+++ b/scss/products/_products.scss
@@ -18,6 +18,7 @@
 
     &__content {
         flex: 1 1 auto;
+        width: 100%;
     }
 
     &__view {
@@ -81,9 +82,18 @@
     }
 
     @include r($lg) {
-        &__pagination {
+        ul .prosuct-shop__pagination {
             margin-bottom: 50px;
         }
+    }
+}
+
+.product-shop__pagination {
+    display: flex;
+    justify-content: center;
+
+    @include r($lg) {
+        margin-bottom: 50px;
     }
 }
 
